; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cosa.c_cosa_net_timeout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cosa.c_cosa_net_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.channel_data = type { i32*, %struct.TYPE_6__*, %struct.TYPE_5__* }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@RXBIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @cosa_net_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cosa_net_timeout(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.channel_data*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.channel_data* @dev_to_chan(%struct.net_device* %4)
  store %struct.channel_data* %5, %struct.channel_data** %3, align 8
  %6 = load i32, i32* @RXBIT, align 4
  %7 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %8 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %7, i32 0, i32 1
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = call i64 @test_bit(i32 %6, i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %1
  %14 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %15 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %14, i32 0, i32 2
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 3
  %19 = load i32, i32* %18, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %18, align 4
  %21 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %22 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %21, i32 0, i32 2
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %25, align 4
  br label %43

28:                                               ; preds = %1
  %29 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %30 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %29, i32 0, i32 2
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %33, align 4
  %36 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %37 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %36, i32 0, i32 2
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %40, align 4
  br label %43

43:                                               ; preds = %28, %13
  %44 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %45 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %44, i32 0, i32 1
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %45, align 8
  %47 = call i32 @cosa_kick(%struct.TYPE_6__* %46)
  %48 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %49 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %48, i32 0, i32 0
  %50 = load i32*, i32** %49, align 8
  %51 = icmp ne i32* %50, null
  br i1 %51, label %52, label %59

52:                                               ; preds = %43
  %53 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %54 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %53, i32 0, i32 0
  %55 = load i32*, i32** %54, align 8
  %56 = call i32 @dev_kfree_skb(i32* %55)
  %57 = load %struct.channel_data*, %struct.channel_data** %3, align 8
  %58 = getelementptr inbounds %struct.channel_data, %struct.channel_data* %57, i32 0, i32 0
  store i32* null, i32** %58, align 8
  br label %59

59:                                               ; preds = %52, %43
  %60 = load %struct.net_device*, %struct.net_device** %2, align 8
  %61 = call i32 @netif_wake_queue(%struct.net_device* %60)
  ret void
}

declare dso_local %struct.channel_data* @dev_to_chan(%struct.net_device*) #1

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @cosa_kick(%struct.TYPE_6__*) #1

declare dso_local i32 @dev_kfree_skb(i32*) #1

declare dso_local i32 @netif_wake_queue(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
